versioned_docs/version-1.1/sql/commands/sql-drop-source.md
---
id: sql-drop-source
title: DROP SOURCE
description: Remove a source.
slug: /sql-drop-source
---
<head>
  <link rel="canonical" href="https://docs.risingwave.com/docs/current/sql-drop-source/" />
</head>

Use the `DROP SOURCE` command to remove a [source](sql-create-source.md) if you no longer need the data inflow from the source.

Before you can remove a source, you must use [DROP MATERIALIZED VIEW](sql-drop-mv.md) to remove all its dependent materialized views.

## Syntax

```sql
DROP SOURCE [ IF EXISTS ] [schema_name.]source_name [ CASCADE ];
```

import rr from '@theme/RailroadDiagram'

export const svg = rr.Diagram(
    rr.Sequence(
        rr.Terminal('DROP SOURCE'),
        rr.Optional(
            rr.Terminal('IF EXISTS')
        ),
        rr.Optional(
            rr.Sequence(
                rr.NonTerminal('schema_name'),
                rr.Terminal('.')
            ),
        ),
        rr.NonTerminal('source_name'),
        rr.Optional(
            rr.Terminal('CASCADE'), 'skip'
        ),
        rr.Terminal(';'),
    )
);

<drawer SVG={svg} />

## Parameters

|Parameter                  | Description           |
|---------------------------|-----------------------|
|*schema_name*                   |The schema of the source that you want to remove. You can use [`SHOW SCHEMAS`](sql-show-schemas.md) to get a list of all available schemas. If you don't specify a schema, the specified source in the default schema `public` will be removed.|
|*source_name*                   |The name of the source to remove.|
|**CASCADE** option| If this option is specified, all objects (such as materialized views) that depend on the source, and in turn all objects that depend on those objects will be dropped.|

## Examples

This statement removes the `rw_source` source in the default schema (`public`) from the database:

```sql
DROP SOURCE rw_source;
```

This statement removes the `rw_source` source in the `rw_schema` schema from the database:

```sql
DROP SOURCE IF EXISTS rw_schema.rw_source;
```

## See also

[`CREATE SOURCE`](sql-create-source.md) — Create a source.
